--- a/gui/coldsim.glade
+++ b/gui/coldsim.glade
@@ -22,12 +22,12 @@
                 <child>
                   <widget class="GtkMenu" id="menu1">
                     <property name="visible">True</property>
-                    <signal name="selection_done" handler="main_quit"/>
                     <child>
                       <widget class="GtkImageMenuItem" id="imagemenuitem5">
                         <property name="label">&#x41E;&#x442;&#x43A;&#x440;&#x44B;&#x442;&#x44C;</property>
                         <property name="visible">True</property>
                         <property name="use_stock">False</property>
+                        <signal name="activate" handler="files_open_dialog"/>
                         <child internal-child="image">
                           <widget class="GtkImage" id="image2">
                             <property name="visible">True</property>
@@ -42,6 +42,7 @@
                         <property name="label">&#x421;&#x43E;&#x445;&#x440;&#x430;&#x43D;&#x438;&#x442;&#x44C;</property>
                         <property name="visible">True</property>
                         <property name="use_stock">False</property>
+                        <signal name="activate" handler="show_save_options"/>
                         <child internal-child="image">
                           <widget class="GtkImage" id="image4">
                             <property name="visible">True</property>
@@ -56,6 +57,7 @@
                         <property name="label">&#x412;&#x44B;&#x445;&#x43E;&#x434;</property>
                         <property name="visible">True</property>
                         <property name="use_stock">False</property>
+                        <signal name="activate" handler="main_quit"/>
                         <child internal-child="image">
                           <widget class="GtkImage" id="image3">
                             <property name="visible">True</property>
@@ -4386,7 +4388,6 @@
     <property name="transient_for">window_main</property>
     <property name="has_separator">False</property>
     <property name="program_name">ColdSim</property>
-    <property name="version">0.2.1</property>
     <property name="copyright">Copyright (C) 2010 nE0sIghT</property>
     <property name="comments" translatable="yes">&#x421;&#x432;&#x43E;&#x431;&#x43E;&#x434;&#x43D;&#x44B;&#x439; &#x441;&#x438;&#x43C;&#x443;&#x43B;&#x44F;&#x442;&#x43E;&#x440; &#x431;&#x43E;&#x44F; Cold Zone</property>
     <property name="website">http://coldzone.ru</property>
@@ -6714,6 +6715,7 @@ nE0sIghT &lt;admin@coldzone.ru&gt;</property>
   </widget>
   <widget class="GtkDialog" id="window_save">
     <property name="border_width">5</property>
+    <property name="title" translatable="yes">&#x421;&#x43E;&#x445;&#x440;&#x430;&#x43D;&#x435;&#x43D;&#x438;&#x435; &#x434;&#x430;&#x43D;&#x43D;&#x44B;&#x445;</property>
     <property name="modal">True</property>
     <property name="window_position">center-on-parent</property>
     <property name="type_hint">normal</property>
@@ -6737,7 +6739,7 @@ nE0sIghT &lt;admin@coldzone.ru&gt;</property>
                 <child>
                   <widget class="GtkTable" id="table12">
                     <property name="visible">True</property>
-                    <property name="n_rows">3</property>
+                    <property name="n_rows">4</property>
                     <property name="n_columns">3</property>
                     <property name="column_spacing">5</property>
                     <property name="row_spacing">5</property>
@@ -6774,7 +6776,7 @@ nE0sIghT &lt;admin@coldzone.ru&gt;</property>
                       </packing>
                     </child>
                     <child>
-                      <widget class="GtkCheckButton" id="checkbutton1">
+                      <widget class="GtkCheckButton" id="save_fleet_a">
                         <property name="label" translatable="yes">&#x410;&#x442;&#x430;&#x43A;&#x443;&#x44E;&#x449;&#x438;&#x439;</property>
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
@@ -6788,7 +6790,7 @@ nE0sIghT &lt;admin@coldzone.ru&gt;</property>
                       </packing>
                     </child>
                     <child>
-                      <widget class="GtkCheckButton" id="checkbutton2">
+                      <widget class="GtkCheckButton" id="save_fleet_d">
                         <property name="label" translatable="yes">&#x41E;&#x431;&#x43E;&#x440;&#x43E;&#x43D;&#x44F;&#x44E;&#x449;&#x438;&#x439;&#x441;&#x44F;</property>
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
@@ -6802,7 +6804,7 @@ nE0sIghT &lt;admin@coldzone.ru&gt;</property>
                       </packing>
                     </child>
                     <child>
-                      <widget class="GtkCheckButton" id="checkbutton3">
+                      <widget class="GtkCheckButton" id="save_tech_a">
                         <property name="label" translatable="yes">&#x410;&#x442;&#x430;&#x43A;&#x443;&#x44E;&#x449;&#x438;&#x439;</property>
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
@@ -6818,7 +6820,7 @@ nE0sIghT &lt;admin@coldzone.ru&gt;</property>
                       </packing>
                     </child>
                     <child>
-                      <widget class="GtkCheckButton" id="checkbutton4">
+                      <widget class="GtkCheckButton" id="save_tech_d">
                         <property name="label" translatable="yes">&#x41E;&#x431;&#x43E;&#x440;&#x43E;&#x43D;&#x44F;&#x44E;&#x449;&#x438;&#x439;&#x441;&#x44F;</property>
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
@@ -6834,7 +6836,7 @@ nE0sIghT &lt;admin@coldzone.ru&gt;</property>
                       </packing>
                     </child>
                     <child>
-                      <widget class="GtkCheckButton" id="checkbutton5">
+                      <widget class="GtkCheckButton" id="save_officiers_a">
                         <property name="label" translatable="yes">&#x410;&#x442;&#x430;&#x43A;&#x443;&#x44E;&#x449;&#x438;&#x439;</property>
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
@@ -6850,7 +6852,7 @@ nE0sIghT &lt;admin@coldzone.ru&gt;</property>
                       </packing>
                     </child>
                     <child>
-                      <widget class="GtkCheckButton" id="checkbutton6">
+                      <widget class="GtkCheckButton" id="save_officiers_d">
                         <property name="label" translatable="yes">&#x41E;&#x431;&#x43E;&#x440;&#x43E;&#x43D;&#x44F;&#x44E;&#x449;&#x438;&#x439;&#x441;&#x44F;</property>
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
@@ -6863,6 +6865,37 @@ nE0sIghT &lt;admin@coldzone.ru&gt;</property>
                         <property name="right_attach">3</property>
                         <property name="top_attach">2</property>
                         <property name="bottom_attach">3</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <placeholder/>
+                    </child>
+                    <child>
+                      <widget class="GtkLabel" id="label139">
+                        <property name="visible">True</property>
+                        <property name="xalign">0</property>
+                        <property name="label" translatable="yes">&lt;b&gt;&#x420;&#x435;&#x437;&#x443;&#x43B;&#x44C;&#x442;&#x430;&#x442;&#x44B; &#x431;&#x438;&#x442;&#x432;&#x44B;&lt;/b&gt;</property>
+                        <property name="use_markup">True</property>
+                      </widget>
+                      <packing>
+                        <property name="top_attach">3</property>
+                        <property name="bottom_attach">4</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <widget class="GtkCheckButton" id="save_results">
+                        <property name="label" translatable="yes">&#x421;&#x43E;&#x445;&#x440;&#x430;&#x43D;&#x438;&#x442;&#x44C;</property>
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                        <property name="receives_default">False</property>
+                        <property name="active">True</property>
+                        <property name="draw_indicator">True</property>
+                      </widget>
+                      <packing>
+                        <property name="left_attach">1</property>
+                        <property name="right_attach">2</property>
+                        <property name="top_attach">3</property>
+                        <property name="bottom_attach">4</property>
                       </packing>
                     </child>
                   </widget>
@@ -6894,6 +6927,8 @@ nE0sIghT &lt;admin@coldzone.ru&gt;</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
+                <signal name="clicked" handler="hide_save_options"/>
+                <signal name="activate" handler="hide_save_options"/>
               </widget>
               <packing>
                 <property name="expand">False</property>
@@ -6907,6 +6942,8 @@ nE0sIghT &lt;admin@coldzone.ru&gt;</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
+                <signal name="clicked" handler="files_save_dialog"/>
+                <signal name="activate" handler="files_save_dialog"/>
               </widget>
               <packing>
                 <property name="expand">False</property>
@@ -6926,10 +6963,9 @@ nE0sIghT &lt;admin@coldzone.ru&gt;</property>
   </widget>
   <widget class="GtkFileChooserDialog" id="window_files">
     <property name="border_width">5</property>
+    <property name="title" translatable="yes">&#x412;&#x44B;&#x431;&#x435;&#x440;&#x438;&#x442;&#x435; &#x444;&#x430;&#x439;&#x43B;</property>
     <property name="modal">True</property>
     <property name="window_position">center-on-parent</property>
-    <property name="default_width">400</property>
-    <property name="default_height">300</property>
     <property name="type_hint">normal</property>
     <property name="transient_for">window_main</property>
     <property name="has_separator">False</property>
@@ -6941,17 +6977,72 @@ nE0sIghT &lt;admin@coldzone.ru&gt;</property>
         <property name="orientation">vertical</property>
         <property name="spacing">2</property>
         <child>
-          <placeholder/>
+          <widget class="GtkHBox" id="hbox24">
+            <property name="visible">True</property>
+            <property name="border_width">5</property>
+            <property name="spacing">5</property>
+            <child>
+              <widget class="GtkLabel" id="label138">
+                <property name="visible">True</property>
+                <property name="xalign">0</property>
+                <property name="label" translatable="yes">&#x422;&#x438;&#x43F; &#x444;&#x430;&#x439;&#x43B;&#x430;:</property>
+              </widget>
+              <packing>
+                <property name="expand">False</property>
+                <property name="position">0</property>
+              </packing>
+            </child>
+            <child>
+              <widget class="GtkComboBox" id="files_combobox">
+                <property name="visible">True</property>
+                <property name="active">0</property>
+                <property name="items">&#x424;&#x430;&#x439;&#x43B;&#x44B; ColdSim
+&#x412;&#x441;&#x435; &#x444;&#x430;&#x439;&#x43B;&#x44B;</property>
+                <signal name="changed" handler="files_filter_changed"/>
+              </widget>
+              <packing>
+                <property name="expand">False</property>
+                <property name="position">1</property>
+              </packing>
+            </child>
+          </widget>
+          <packing>
+            <property name="expand">False</property>
+            <property name="position">2</property>
+          </packing>
         </child>
         <child internal-child="action_area">
           <widget class="GtkHButtonBox" id="dialog-action_area3">
             <property name="visible">True</property>
             <property name="layout_style">end</property>
             <child>
-              <placeholder/>
+              <widget class="GtkButton" id="button17">
+                <property name="label">gtk-cancel</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">True</property>
+                <property name="use_stock">True</property>
+                <signal name="clicked" handler="hide_files_dialog"/>
+                <signal name="activate" handler="hide_files_dialog"/>
+              </widget>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">False</property>
+                <property name="position">0</property>
+              </packing>
             </child>
             <child>
-              <placeholder/>
+              <widget class="GtkButton" id="files_action_button">
+                <property name="label" translatable="yes">&#x41E;&#x442;&#x43A;&#x440;&#x44B;&#x442;&#x44C;</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">True</property>
+              </widget>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">False</property>
+                <property name="position">1</property>
+              </packing>
             </child>
           </widget>
           <packing>
