--- a/gui/coldsim.glade
+++ b/gui/coldsim.glade
@@ -3430,7 +3430,7 @@
                             <child>
                               <widget class="GtkTable" id="table8">
                                 <property name="visible">True</property>
-                                <property name="n_rows">9</property>
+                                <property name="n_rows">10</property>
                                 <property name="n_columns">2</property>
                                 <property name="column_spacing">4</property>
                                 <property name="row_spacing">4</property>
@@ -4288,6 +4288,30 @@
                                     <property name="bottom_attach">9</property>
                                   </packing>
                                 </child>
+                                <child>
+                                  <widget class="GtkLabel" id="label143">
+                                    <property name="visible">True</property>
+                                    <property name="xalign">0</property>
+                                    <property name="label" translatable="yes">&#x421;&#x43A;&#x43E;&#x440;&#x43E;&#x441;&#x442;&#x44C;
+&#x440;&#x430;&#x441;&#x447;&#x435;&#x442;&#x430;</property>
+                                  </widget>
+                                  <packing>
+                                    <property name="top_attach">9</property>
+                                    <property name="bottom_attach">10</property>
+                                  </packing>
+                                </child>
+                                <child>
+                                  <widget class="GtkLabel" id="calculate_time">
+                                    <property name="visible">True</property>
+                                    <property name="xalign">0</property>
+                                  </widget>
+                                  <packing>
+                                    <property name="left_attach">1</property>
+                                    <property name="right_attach">2</property>
+                                    <property name="top_attach">9</property>
+                                    <property name="bottom_attach">10</property>
+                                  </packing>
+                                </child>
                               </widget>
                             </child>
                           </widget>
@@ -4386,7 +4410,6 @@
     <property name="icon_name">dialog-question</property>
     <property name="type_hint">normal</property>
     <property name="transient_for">window_main</property>
-    <property name="has_separator">False</property>
     <property name="program_name">ColdSim</property>
     <property name="copyright">Copyright (C) 2010 nE0sIghT</property>
     <property name="comments" translatable="yes">&#x421;&#x432;&#x43E;&#x431;&#x43E;&#x434;&#x43D;&#x44B;&#x439; &#x441;&#x438;&#x43C;&#x443;&#x43B;&#x44F;&#x442;&#x43E;&#x440; &#x431;&#x43E;&#x44F; Cold Zone</property>
@@ -6834,7 +6857,6 @@ nE0sIghT &lt;admin@coldzone.ru&gt;</property>
     <property name="window_position">center-on-parent</property>
     <property name="type_hint">normal</property>
     <property name="transient_for">window_main</property>
-    <property name="has_separator">False</property>
     <signal name="delete_event" handler="window_hide"/>
     <child internal-child="vbox">
       <widget class="GtkVBox" id="dialog-vbox2">
@@ -6982,9 +7004,6 @@ nE0sIghT &lt;admin@coldzone.ru&gt;</property>
                       </packing>
                     </child>
                     <child>
-                      <placeholder/>
-                    </child>
-                    <child>
                       <widget class="GtkLabel" id="label139">
                         <property name="visible">True</property>
                         <property name="xalign">0</property>
@@ -7011,6 +7030,9 @@ nE0sIghT &lt;admin@coldzone.ru&gt;</property>
                         <property name="top_attach">3</property>
                         <property name="bottom_attach">4</property>
                       </packing>
+                    </child>
+                    <child>
+                      <placeholder/>
                     </child>
                   </widget>
                 </child>
@@ -7082,7 +7104,6 @@ nE0sIghT &lt;admin@coldzone.ru&gt;</property>
     <property name="window_position">center-on-parent</property>
     <property name="type_hint">normal</property>
     <property name="transient_for">window_main</property>
-    <property name="has_separator">False</property>
     <property name="do_overwrite_confirmation">True</property>
     <signal name="delete_event" handler="window_hide"/>
     <child internal-child="vbox">
