--- a/gui/coldsim.glade
+++ b/gui/coldsim.glade
@@ -3220,8 +3220,8 @@
                                 <child>
                                   <widget class="GtkTable" id="table9">
                                     <property name="visible">True</property>
-                                    <property name="n_rows">3</property>
-                                    <property name="n_columns">2</property>
+                                    <property name="n_rows">2</property>
+                                    <property name="n_columns">4</property>
                                     <property name="column_spacing">7</property>
                                     <property name="row_spacing">1</property>
                                     <child>
@@ -3351,11 +3351,11 @@
                                         <property name="visible">True</property>
                                         <property name="xalign">0</property>
                                         <property name="label" translatable="yes">&#x421;&#x43A;&#x43E;&#x440;&#x43E;&#x441;&#x442;&#x44C;
-&#x444;&#x43B;&#x43E;&#x442;&#x430;</property>
+&#x438;&#x433;&#x440;&#x44B;</property>
                                       </widget>
                                       <packing>
-                                        <property name="top_attach">2</property>
-                                        <property name="bottom_attach">3</property>
+                                        <property name="left_attach">2</property>
+                                        <property name="right_attach">3</property>
                                       </packing>
                                     </child>
                                     <child>
@@ -3373,7 +3373,7 @@
                                           </packing>
                                         </child>
                                         <child>
-                                          <widget class="GtkComboBox" id="fleet_factor">
+                                          <widget class="GtkComboBox" id="game_factor">
                                             <property name="visible">True</property>
                                             <property name="active">0</property>
                                             <property name="items" translatable="yes">1
@@ -3387,10 +3387,62 @@
                                         </child>
                                       </widget>
                                       <packing>
-                                        <property name="left_attach">1</property>
-                                        <property name="right_attach">2</property>
-                                        <property name="top_attach">2</property>
-                                        <property name="bottom_attach">3</property>
+                                        <property name="left_attach">3</property>
+                                        <property name="right_attach">4</property>
+                                        <property name="y_options">GTK_EXPAND</property>
+                                      </packing>
+                                    </child>
+                                    <child>
+                                      <widget class="GtkLabel" id="label144">
+                                        <property name="visible">True</property>
+                                        <property name="xalign">0</property>
+                                        <property name="label" translatable="yes">&#x421;&#x43A;&#x43E;&#x440;&#x43E;&#x441;&#x442;&#x44C;
+&#x444;&#x43B;&#x43E;&#x442;&#x430;</property>
+                                      </widget>
+                                      <packing>
+                                        <property name="left_attach">2</property>
+                                        <property name="right_attach">3</property>
+                                        <property name="top_attach">1</property>
+                                        <property name="bottom_attach">2</property>
+                                      </packing>
+                                    </child>
+                                    <child>
+                                      <widget class="GtkHBox" id="hbox25">
+                                        <property name="visible">True</property>
+                                        <child>
+                                          <widget class="GtkComboBox" id="speed_factor">
+                                            <property name="visible">True</property>
+                                            <property name="items" translatable="yes">100
+90
+80
+70
+60
+50
+40
+30
+20
+10</property>
+                                          </widget>
+                                          <packing>
+                                            <property name="expand">False</property>
+                                            <property name="position">0</property>
+                                          </packing>
+                                        </child>
+                                        <child>
+                                          <widget class="GtkLabel" id="label145">
+                                            <property name="visible">True</property>
+                                            <property name="label" translatable="yes">%</property>
+                                          </widget>
+                                          <packing>
+                                            <property name="position">1</property>
+                                          </packing>
+                                        </child>
+                                      </widget>
+                                      <packing>
+                                        <property name="left_attach">3</property>
+                                        <property name="right_attach">4</property>
+                                        <property name="top_attach">1</property>
+                                        <property name="bottom_attach">2</property>
                                         <property name="y_options">GTK_EXPAND</property>
                                       </packing>
                                     </child>
